# ComfyUI_PromptStudio

./: .comfyignore  .gitignore  README.md  __init__.py  framing_templates.json  model_profiles.json  nodes.py  pyproject.toml  routes.py  style_templates.json
tests/: test_regressions.py
web/: prompt_studio.html
web/css/: prompt_studio.css
web/js/: prompt_studio.js  prompt_studio_standalone.js
