[project]
name = "ComfyUI_PromptStudio"
description = "A local ChatGPT like extension for ComfyUI allowing iterative image creation and editing with help of a local LLM"
version = "1.0.1"
license = "MIT"

[project.urls]
Repository = "https://github.com/tiko13/ComfyUI_PromptStudio"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "tiko13"
DisplayName = "ComfyUI_PromptStudio"
Icon = ""
includes = []
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility
