[project]
name = "ComfyUI_PromptStudio"
version = "1.0.1"
description = "A local, ChatGPT-like extension for iterative image creation and editing in ComfyUI with help from a local LLM"
license = { text = "MIT License" }
requires-python = ">=3.9"
classifiers = [
    "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/tiko13/ComfyUI_PromptStudio"
Documentation = "https://github.com/tiko13/ComfyUI_PromptStudio#readme"
"Bug Tracker" = "https://github.com/tiko13/ComfyUI_PromptStudio/issues"

[tool.comfy]
PublisherId = "tiko13"
DisplayName = "ComfyUI_PromptStudio"
